<?xml version="1.0"?>
<package format="2">
  <name>planar_bot_control</name>
  <version>0.0.0</version>
  <description>The planar_bot_control package</description>

  <maintainer email="jankowskijulius@gmail.com">Julius Jankowski</maintainer>

  <license>BSD</license>

  <author email="jankowskijulius@gmail.com">Julius Jankowski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>forward_command_controller</depend>

  <export>
      <controller_interface plugin="${prefix}/planar_bot_control_plugins.xml"/>
  </export>
</package>
